@@ -1,3 +1,12 @@
+2009-07-14  Nick Clifton  <nickc@redhat.com>
+
+	PR 10288
+	* arm-dis.c (arm_opcodes): Catch illegal Addressing Mode 1
+	patterns.
+	(arm_decode_shift): Catch illegal register based shifts.
+	(print_insn_arm): Properly handle negative register r0
+	post-indexed addressing.
+
 2009-07-10  Doug Kwan  <dougkwan@google.com>
 
 	* arm-disc.c (print_insn_coprocessor, print_insn_arm):  Print only
